hphp/hack/test/typecheck/assignment_sequencing/binop_increment.php.exp
File "binop_increment.php", line 4, characters 15-16:
Unsequenced modification and access to local variable. Modified here (Typing[4143])
File "binop_increment.php", line 4, characters 10-11:
And accessed here
