hphp/hack/test/typecheck/assignment_sequencing/binop_increment.php
<?hh // strict

function x(int $y): int {
  return $y + $y++;
}
